# SlicerTissueSegmentation

./: CMakeLists.txt  README.md
Tis_Seg/: Tis_Seg.py
TissueSegmentation/: CMakeLists.txt
TissueSegmentation/Tis_Seg/: CMakeLists.txt
TissueSegmentation/Tis_Seg/Resources/UI/: Tis_Seg.ui
